# msgbox

./: .clang-format  .gitignore  CMakeLists.txt  build.sh
examples/: msgbox.cpp
include/msgbox/: msgbox.h  msgbox.hpp  notify.hpp
src/: msgbox-linux.cpp  notify-linux.cpp
